# monad-validate

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.ci  monad-validate.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml
src/Control/Monad/: Validate.hs
src/Control/Monad/Validate/: Class.hs  Internal.hs
test/Control/Monad/: ValidateSpec.hs
